--- a/02_conceptos_basicos/pod-ejemplo.yml
+++ b/02_conceptos_basicos/pod-ejemplo.yml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: pod-ejemplo
+  name: pod-personalizado
 spec:
   containers:
     - name: nginx
-      image: nginx:mainline-alpine
+      image: javi1139:nginx-egibide
       volumeMounts:
         - name: html
           mountPath: /usr/share/nginx/html
