--- a/03_exponer_pods/clusterip.yml
+++ b/03_exponer_pods/clusterip.yml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: nginx-hello-clusterip
+  name: nginx-personalizado-clusterip
 spec:
   type: ClusterIP
   selector:
-    app: nginx-hello
-    ver: "1"
+    app: nginx-personalizado
+    ver: "3"
   ports:
     - targetPort: 80  # endpoint
       port: 8080      # clusterip
