--- a/03_exponer_pods/nodeport.yml
+++ b/03_exponer_pods/nodeport.yml
@@ -1,11 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: nginx-hello-nodeport
+  name: nginx-personalizado-nodeport
 spec:
   type: NodePort
   selector:
-    app: nginx-hello
+    app: nginx-personalizado
+    ver: "3"
   ports:
     - targetPort: 80  # endpoint
       port: 8080      # clusterip
